--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-
 name: Modified Build and Test
 jobs:
   build:
@@ -7,39 +6,39 @@ jobs:
       fail-fast: false
       matrix:
         java-version:
-        - 21
-        - 22-ea
+          - 21
+          - 22-ea
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
-      with:
-        java-version: ${{ matrix.java-version }}
-        distribution: temurin
-    - name: Cache Maven artifacts
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |-
-          ${{ runner.os }}-maven-
-    - name: Cache node
-      uses: actions/cache@v3
-      with:
-        path: web-bundle/node
-        key: ${{ runner.os }}-node-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |-
-          ${{ runner.os}}-node-
-    - name: Cache node_modules
-      uses: actions/cache@v3
-      with:
-        path: web-bundle/node_modules
-        key: ${{ runner.os }}-node-${{ hashFiles('**/pom.xml', '**/package.json')
-          }}
-        restore-keys: |-
-          ${{ runner.os}}-node_modules-
-    - name: Build ${{ matrix.java-version }}
-      run: mvn -B clean test
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          java-version: ${{ matrix.java-version }}
+          distribution: temurin
+      - name: Cache Maven artifacts
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |-
+            ${{ runner.os }}-maven-
+      - name: Cache node
+        uses: actions/cache@v3
+        with:
+          path: web-bundle/node
+          key: ${{ runner.os }}-node-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |-
+            ${{ runner.os}}-node-
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: web-bundle/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/pom.xml', '**/package.json')
+            }}
+          restore-keys: |-
+            ${{ runner.os}}-node_modules-
+      - name: Build ${{ matrix.java-version }}
+        run: mvn -B clean test "-Dmaven.surefire.reports.skip=true" "-Dmaven.surefire.reportSkip=true"
     name: build (${{ matrix.java-version }})
 'on':
-- push
-- workflow_dispatch
+  - push
+  - workflow_dispatch
